--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "helmet": "^4.1.0",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.4"
