--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "email-templates": "^7.1.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
+    "joi": "^17.2.1",
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.11",
     "pug": "^3.0.0",
